doc: swagger work finally. and add doc for all group and auth handlers
