# delivery/http/handlers/group/group.go
@@ -8,6 +8,17 @@ import (
 	"net/http"
 )
 
+// CreateGroup godoc
+//
+//	@Summary		Create a group
+//	@Description	Create a group for a user
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.CreateGroupRequest	true	"Create group"
+//	@Success		201		{object}	param.CreteGroupResponse
+//	@Router			/groups [post]
 func (h Handler) CreateGroup(c echo.Context) error {
 	var req param.CreateGroupRequest
 
@@ -29,6 +40,17 @@ func (h Handler) CreateGroup(c echo.Context) error {
 	return c.JSON(http.StatusCreated, res)
 }
 
+// ListAllGroups godoc
+//
+//	@Summary		Show all group
+//	@Description	User can list all existence group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.GetMyGroupRequest	true	"List Groups"
+//	@Success		200		{object}	param.GetMyGroupResponse
+//	@Router			/groups [get]
 func (h Handler) ListAllGroups(c echo.Context) error {
 	res, err := h.groupSvc.GetAllGroups(c.Request().Context(), param.GetAllGroupsRequest{})
 	if err != nil {
@@ -39,6 +61,17 @@ func (h Handler) ListAllGroups(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
+// GetMyGroup godoc
+//
+//	@Summary		Get my group
+//	@Description	Get created group info
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.GetMyGroupRequest	true	"My Group Info"
+//	@Success		200		{object}	param.GetMyGroupResponse
+//	@Router			/groups/my [get]
 func (h Handler) GetMyGroup(c echo.Context) error {
 	claims := claims.GetClaimsFromEchoContext(c, h.authConfig)
 	res, err := h.groupSvc.GetMyGroup(c.Request().Context(), param.GetMyGroupRequest{}, claims.ID)
@@ -50,6 +83,17 @@ func (h Handler) GetMyGroup(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
+// JoinGroup godoc
+//
+//	@Summary		Join group
+//	@Description	User can join a group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.JoinRequest	true	"Join to group"
+//	@Success		2001	{object}	param.JoinResponse
+//	@Router			/join_requests [post]
 func (h Handler) JoinGroup(c echo.Context) error {
 	var req param.JoinRequest
 	if err := c.Bind(&req); err != nil {
@@ -71,6 +115,17 @@ func (h Handler) JoinGroup(c echo.Context) error {
 	return c.JSON(http.StatusCreated, res)
 }
 
+// ListMyJoinRequest godoc
+//
+//	@Summary		List join requests
+//	@Description	Show list of all joining requests
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.ListJoinRequest	true	"List joins"
+//	@Success		200		{object}	param.ListJoinRequestsResponse
+//	@Router			/join_requests [get]
 func (h Handler) ListMyJoinRequest(c echo.Context) error {
 	claims := claims.GetClaimsFromEchoContext(c, h.authConfig)
 
@@ -84,6 +139,17 @@ func (h Handler) ListMyJoinRequest(c echo.Context) error {
 
 }
 
+// ListJoinRequestToMyGroup godoc
+//
+//	@Summary		List admin join requests
+//	@Description	Admin can see list of join requests to it's group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.ListJoinRequestsToMyGroupRequest	true	"List to my group"
+//	@Success		200		{object}	param.ListJoinRequestsToMyGroupResponse
+//	@Router			/join_requests [get]
 func (h Handler) ListJoinRequestToMyGroup(c echo.Context) error {
 	claims := claims.GetClaimsFromEchoContext(c, h.authConfig)
 
@@ -96,6 +162,17 @@ func (h Handler) ListJoinRequestToMyGroup(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
+// AcceptJoin godoc
+//
+//	@Summary		List admin join requests
+//	@Description	Admin can see list of join requests to it's group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.ListJoinRequestsToMyGroupRequest	true	"Accept"
+//	@Success		200		{object}	param.ListJoinRequestsToMyGroupResponse
+//	@Router			/join_requests [get]
 func (h Handler) AcceptJoin(c echo.Context) error {
 	var req param.AcceptJoinRequest
 
@@ -118,6 +195,18 @@ func (h Handler) AcceptJoin(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
+// ConnectGroups godoc
+//
+//	@Summary		Connect groups
+//	@Description	Admins can request to each other to connect their groups
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.GroupConnectionRequest	true	"Connect group"
+//	@Success		201		{object}	param.GroupConnectionResponse
+//	@Router			/connection_requests [post]
+
 func (h Handler) ConnectGroups(c echo.Context) error {
 	var req param.GroupConnectionRequest
 
@@ -139,6 +228,17 @@ func (h Handler) ConnectGroups(c echo.Context) error {
 	return c.JSON(http.StatusCreated, res)
 }
 
+// ListMyGroupConnections godoc
+//
+//	@Summary		List all group connections
+//	@Description	Admins can see list of all other groups that connect with its group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.MyGroupConnectionsRequest	true	"List connections"
+//	@Success		201		{object}	param.MyGroupConnectionsResponse
+//	@Router			/connection_requests [get]
 func (h Handler) ListMyGroupConnections(c echo.Context) error {
 	claims := claims.GetClaimsFromEchoContext(c, h.authConfig)
 
@@ -150,6 +250,17 @@ func (h Handler) ListMyGroupConnections(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
+// AcceptGroupConnection godoc
+//
+//	@Summary		Accept group connection request
+//	@Description	Admins can accept request from other group to join with its group
+//	@Security		auth
+//	@Tags			group
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		param.AcceptGroupConnectionRequest	true	"Accept group connections"
+//	@Success		201		{object}	param.AcceptGroupConnectionResponse
+//	@Router			/connection_requests/accept [get]
 func (h Handler) AcceptGroupConnection(c echo.Context) error {
 	var req param.AcceptGroupConnectionRequest
 
